--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,6 @@ version: '2'
 services:
   bot:
     build: .
+    command: py.test --cov --cov-report term-missing
     volumes:
       - .:/usr/src/app
