--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: python
 python:
   - "3.5"
-install:
-  - pip install -r requirements.txt
-script: py.test --cov --cov-report term-missing
+env:
+  DOCKER_COMPOSE_VERSION: 1.8.0
+
+before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+
+script: docker-compose build && docker-compose up
