--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 
 script: docker-compose build && docker-compose up
+
+after_success:
+    - docker-compose run bot coveralls
