run coveralls outside of docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,9 @@ before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
+  - pip install coveralls
 
 script: docker-compose build && docker-compose up
 
 after_success:
-    - docker-compose run bot coveralls
+  - coveralls
