--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
 env:
   DOCKER_COMPOSE_VERSION: 1.8.0
 
-before_install:
+#before_install:
 #
 # Try to launch tests withotu docker
 #
@@ -27,7 +27,7 @@ before_install:
   - pip install coveralls
 
 script:
-  - py.test --cov --cov-report term-missing
+  - py.test --cov botstory --cov-report term-missing
 
 after_success:
   - coveralls
